--- a/src/examples/spiky_box/spiky_box.gh.html
+++ b/src/examples/spiky_box/spiky_box.gh.html
@@ -65,5 +65,6 @@
                 <div><a href="spiky_box.gh" download="spiky_box.gh.html">Save source code</a></div>
             </div>
         </div>
+        <script type="module" src="./script.js"></script>
     </body>
 </html>
