--- a/src/examples/3d_iphone_case/index.html
+++ b/src/examples/3d_iphone_case/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="data:,">
-        <title>3d_iphone_case.gh</title>
+        <title>3d_iphone_case2.gh</title>
         <style>
             body {
                 margin: 0;
