--- a/src/examples/3d_iphone_case/index.html
+++ b/src/examples/3d_iphone_case/index.html
@@ -46,6 +46,14 @@
                   <input type="range" id="height" min="15" max="30" value="30" step="1">
                 </div>
                 <div><button id="downloadButton" disabled>Download</button></div>
+                <div>
+                    <input type="color" id="base" name="base" value="">
+                    <label for="base"> Base color </label> 
+                </div>
+                <div>
+                    <input type="color" id="top" name="top" value="">
+                    <label for="top"> Top color </label>
+                </div>
             </div>
         </div>
         <script type="module" src="script.js"></script>
