--- a/src/examples/iphone_case_creater_final/index.html
+++ b/src/examples/iphone_case_creater_final/index.html
@@ -15,7 +15,7 @@
             #container canvas, #overlay { position: absolute; }
             #overlay { 
               z-index: 1; 
-              width: 30%; 
+              width: 25%; 
               float: left; 
               margin-right: 70%; 
               background-color:beige;
@@ -40,6 +40,25 @@
                 0% { transform: rotate(0deg); }
                 100% { transform: rotate(360deg); }
             }
+
+            input[type="range"] {
+              -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
+              appearance: none;
+              cursor: pointer; /* カーソルを分かりやすく */
+              outline: none; /* スライダーのアウトラインは見た目がキツイので消す */
+              height: 2px; /* バーの高さ */
+              width: 95%; /* バーの幅 */
+              background: #38d62a; /* バーの背景色 */
+              border-radius: 10px; /* バーの両端の丸み */
+              border: solid 0.3px #8dffca; /* バー周囲の線 */
+            }
+            input[type="range"]::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                height: 13px; /* バーの高さ */
+                width: 13px; /* バーの幅 */
+                border-radius: 100%;
+                background: #5a5a5a; /* バーの背景色 */
+              }
         </style>
     </head>
     <body>
