--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -34,7 +34,7 @@
                 <td>This example is for the final assignment!!</td>
             </tr>
             <tr>
-                <td><a href="./web app/">web app for studio</a></td>
+                <td><a href="./web app studio/">web app for studio</a></td>
                 <td>web app for studio</td>
             </tr>
             <tr>
