--- a/src/examples/web app studio/index.html
+++ b/src/examples/web app studio/index.html
@@ -49,11 +49,10 @@
                   <input type="number" id="phase" value="1">
                 </div>
                 <div>
-                  <label for="rail">rail</label>
-                  <input type="range" id="rail" min="1" max="100" value="1" step="1">
+                  <label for="panels on">panels on</label>
+                  <input type="checkbox" id="panels on" >
                 </div>
                 <div><button id="downloadButton" disabled>Download</button></div>
-                <div><a href="studio webapp.gh" download="studio webapp.gh.html">Save source code</a></div>
             </div>
         </div>
 
